# GenomeManager

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
src/genomehandler/: __init__.py  gene_class.py  genome_class.py  genome_db.py  genome_utils.py
